Sidebars & Template Parts

--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
 /*
 Theme Name : FirstTheme
 Author : Nebur242
+Author URI : nzaou.dba.ma
 Author email : rm.nzaou.etudes@gmail.com
 Description : my first wordpress theme
 version 1.0
 license GNU General Public License Version 3.0
-Text Domain : ThemeName
+Text Domain : FirstTheme
 tags : Responsive, Translation-ready 
 
 */
